--- a/SpectroPolarisClient/res/layout/activity_join.xml
+++ b/SpectroPolarisClient/res/layout/activity_join.xml
@@ -72,6 +72,23 @@
     
 	</LinearLayout>
 	
+    <LinearLayout
+        android:id="@+id/join_pickColorBar"
+        android:layout_width="match_parent"
+	    android:layout_height="wrap_content" 
+	    android:orientation="horizontal"
+	    android:gravity="center_horizontal"
+	    android:layout_marginBottom="10dp" >
+        
+	    <Button
+	        android:id="@+id/join_pickColor"
+	        android:layout_width="150dp"
+	        android:layout_height="wrap_content"
+	        android:text="@string/menu_colorButton"
+	        android:onClick="pickColor"/>
+	    
+    </LinearLayout>
+	
     <Button
         android:id="@+id/join_join"
         android:layout_width="150dp"
